--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ function intersectLineCircle(P0, d, C, r){
    Do aplikace nedávám cizí obrázky; počítám, že to pojede vedle papírového zadání.
 ========================= */
 const QUESTIONS = [
-  importing();
+  importing()
 
   function importing(){ return null; }
 ].filter(Boolean);
