--- a/index.html
+++ b/index.html
@@ -272,11 +272,8 @@ function intersectLineCircle(P0, d, C, r){
    Pozn.: U úloh 11–15 jsou v originálu obrázky/grafy/mapa.
    Do aplikace nedávám cizí obrázky; počítám, že to pojede vedle papírového zadání.
 ========================= */
-const QUESTIONS = [
-  importing()
+const QUESTIONS = [];
 
-  function importing(){ return null; }
-].filter(Boolean);
 
 /* Build list explicitly (avoids accidental edits) */
 QUESTIONS.push(
